--- a/src/app/stepper/stepper.component.html
+++ b/src/app/stepper/stepper.component.html
@@ -4,59 +4,53 @@
             <div class="step" icon="fa fa-pencil-alt" [ngClass]="{'active': step === 1}">
                 <div class="step-title">
                     <span class="step-number">01</span>
-
+                    <span>{{ 'stepper.step1' | translate }}</span>
                 </div>
             </div>
             <div class="step" icon="fa fa-info-circle" [ngClass]="{'active': step === 2}">
                 <div class="step-title">
                     <span class="step-number">02</span>
-
+                    <span>{{ 'stepper.step2' | translate }}</span>
                 </div>
             </div>
             <div class="step" icon="fa fa-book-reader" [ngClass]="{'active': step === 3}">
                 <div class="step-title">
                     <span class="step-number">03</span>
-
+                    <span>{{ 'stepper.step3' | translate }}</span>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="stepper-content-container">
         <!-- Step 1 Content -->
         <div class="stepper-content fade-in" *ngIf="step === 1">
             <div class="w-100 h-100" style="padding: 30px 10px; background: #f9f9f9">
                 <div class="text-muted pt-20 pe-0 pb-10 ps-0 fw-bold">
-                    <h2>Step 1</h2>
+                    <h2>{{ 'stepper.step1Title' | translate }}</h2>
                 </div>
                 <div>
                     <nav class="navbar bg-body-tertiary mx-auto" style="margin-top: 50px; width: 90%;">
                         <div class="container-fluid">
-                            <a class="navbar-brand">Products</a>
+                            <a class="navbar-brand">{{ 'stepper.products' | translate }}</a>
                             <form class="d-flex" role="search">
-                                <input type="search" class="form-control rounded" placeholder="Search"
-                                    aria-label="Search" aria-describedby="search-addon" #searchText />
+                                <input type="search" class="form-control rounded"
+                                    placeholder="{{ 'stepper.searchPlaceholder' | translate }}" aria-label="Search"
+                                    aria-describedby="search-addon" #searchText />
                                 <button type="button" class="btn btn-outline-primary" data-mdb-ripple-init
-                                    (click)="search()">search</button>
-
-
+                                    (click)="search()">{{ 'buttons3.search' | translate }}</button>
                             </form>
                         </div>
-
-
-
                     </nav>
-
-
 
                     <table class="table align-middle mt-3 bg-white mx-auto" style="width: 90%; table-layout: fixed;">
                         <thead class="bg-light">
                             <tr>
-                                <th style="width: 20%;">Product</th>
-                                <th style="width: 35%;">Description</th>
-                                <th style="width: 15%;">SKU</th>
-                                <th style="width: 15%;">Stock</th>
-                                <th style="width: 15%;">Price</th>
-
+                                <th style="width: 20%;">{{ 'stepper.product' | translate }}</th>
+                                <th style="width: 35%;">{{ 'stepper.description' | translate }}</th>
+                                <th style="width: 15%;">{{ 'stepper.sku' | translate }}</th>
+                                <th style="width: 15%;">{{ 'stepper.stock' | translate }}</th>
+                                <th style="width: 15%;">{{ 'stepper.price' | translate }}</th>
                             </tr>
                         </thead>
 
@@ -82,21 +76,18 @@
                                     <p class="fw-normal mb-1">{{ product.stock }}</p>
                                 </td>
                                 <td>
-                                    <p class="fw-normal mb-1">{{ product.price }}jd</p>
+                                    <p class="fw-normal mb-1">{{ product.price }} JD</p>
                                 </td>
                             </tr>
-
                         </tbody>
-
                     </table>
                 </div>
                 <div class="d-flex w-100 align-items-center justify-content-between">
                     <button class="btn btn-dark btn-block mb-3 mt-5 ms-auto" [disabled]="isSelectedProduct"
                         (click)="setStep(2)">
-                        Next
+                        {{ 'buttons3.next' | translate }}
                     </button>
                 </div>
-
             </div>
         </div>
 
@@ -105,127 +96,134 @@
             <div class="w-100 h-100" style="padding: 30px 10px; background: #f9f9f9">
                 <div class="my-0 mx-auto" style="max-width: 500px; border-radius: 10px; background: #f5f5f5">
                     <div class="p-10 d-flex flex-column justify-content-center align-items-center">
-                        <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold">Step 2</div>
+                        <div class="text-center pt-20 pe-0 pb-10 ps-0 fw-bold">{{ 'stepper.step2Title' | translate }}
+                        </div>
                         <form [formGroup]="addOrderForm"
                             class="p-4 d-flex flex-column justify-content-center align-items-center w-100">
 
                             <!-- Customer Name -->
                             <div class="form-group w-100 mb-3">
-                                <label class="text-muted mb-2">Customer Name</label>
-                                <input type="text" class="form-control bg-light" placeholder="Enter customer name"
+                                <label class="text-muted mb-2">{{ 'stepper.customerName' | translate }}</label>
+                                <input type="text" class="form-control bg-light"
+                                    placeholder="{{ 'stepper.enterCustomerName' | translate }}"
                                     formControlName="customerName" />
                             </div>
                             <div class="invalid-feedback"
                                 *ngIf="addOrderForm.controls['customerName'].touched && addOrderForm.controls['customerName'].hasError('required')">
-                                The customer Name should not be empty.
+                                {{ 'formErrors.customerNameRequired' | translate }}
                             </div>
                             <!-- Shipping Address -->
                             <div class="form-group w-100 mb-3">
-                                <label for="shipping-address" class="text-muted mb-2">Shipping Address</label>
+                                <label for="shipping-address" class="text-muted mb-2">{{ 'stepper.shippingAddress' |
+                                    translate }}</label>
                                 <input id="shipping-address" type="text" class="form-control bg-light"
-                                    placeholder="Enter shipping address" formControlName="shippingAddress" />
+                                    placeholder="{{ 'stepper.enterShippingAddress' | translate }}"
+                                    formControlName="shippingAddress" />
                             </div>
                             <div class="invalid-feedback"
                                 *ngIf="addOrderForm.controls['shippingAddress'].touched && addOrderForm.controls['shippingAddress'].hasError('required')">
-                                The shipping address should not be empty.
+                                {{ 'formErrors.shippingAddressRequired' | translate }}
                             </div>
                             <!-- Order Date -->
                             <div class="form-group w-100 mb-3">
-                                <label for="order-date" class="text-muted mb-2">Order Date</label>
+                                <label for="order-date" class="text-muted mb-2">{{ 'stepper.orderDate' | translate
+                                    }}</label>
                                 <input id="order-date" type="date" class="form-control bg-light"
                                     formControlName="orderDate" min="" />
                             </div>
                             <div class="invalid-feedback"
                                 *ngIf="addOrderForm.controls['orderDate'].touched && addOrderForm.controls['orderDate'].hasError('required')">
-                                The order date should not be empty.
+                                {{ 'formErrors.orderDateRequired' | translate }}
                             </div>
                             <!-- Order State -->
                             <div class="form-group w-100 mb-3">
-                                <label for="order-state" class="text-muted mb-2">Order State</label>
+                                <label for="order-state" class="text-muted mb-2">{{ 'stepper.orderState' | translate
+                                    }}</label>
                                 <select id="order-state" formControlName="orderState" class="form-control bg-light">
-                                    <option value="Pending">Pending</option>
-                                    <option value="Delivered">Delivered</option>
-                                    <option value="Cancelled">Cancelled</option>
+                                    <option value="Pending">{{ 'stepper.pending' | translate }}</option>
+                                    <option value="Delivered">{{ 'stepper.delivered' | translate }}</option>
+                                    <option value="Cancelled">{{ 'stepper.cancelled' | translate }}</option>
                                 </select>
                             </div>
                             <div class="invalid-feedback"
                                 *ngIf="addOrderForm.controls['orderState'].touched && addOrderForm.controls['orderState'].hasError('required')">
-                                The order State should not be empty.
+                                {{ 'formErrors.orderStateRequired' | translate }}
                             </div>
                             <!-- Quantity -->
                             <div class="form-group w-100 mb-3">
-                                <label for="quantity" class="text-muted mb-2">Quantity</label>
+                                <label for="quantity" class="text-muted mb-2">{{ 'stepper.quantity' | translate
+                                    }}</label>
                                 <input id="quantity" type="number" class="form-control bg-light"
-                                    placeholder="Enter quantity" formControlName="quantity"
+                                    placeholder="{{ 'stepper.enterQuantity' | translate }}" formControlName="quantity"
                                     [max]=" isEdit==true?quantity:stock" min="0" />
                             </div>
                             <div class="invalid-feedback"
                                 *ngIf="addOrderForm.controls['quantity'].touched && addOrderForm.controls['quantity'].hasError('required')">
-                                The quantity should not be empty.
+                                {{ 'formErrors.quantityRequired' | translate }}
                             </div>
 
                             <!-- Payment Method -->
                             <div class="form-group w-100 mb-3">
-                                <label for="payment-method" class="text-muted mb-2">Payment Method</label>
+                                <label for="payment-method" class="text-muted mb-2">{{ 'stepper.paymentMethod' |
+                                    translate }}</label>
                                 <select id="payment-method" class="form-control bg-light"
                                     formControlName="paymentMethod">
-                                    <option value="Cash">Cash</option>
-                                    <option value="Credit-Card">Credit Card</option>
-                                    <option value="Paypal">PayPal</option>
+                                    <option value="Cash">{{ 'stepper.cash' | translate }}</option>
+                                    <option value="Credit-Card">{{ 'stepper.creditCard' | translate }}</option>
+                                    <option value="Paypal">{{ 'stepper.paypal' | translate }}</option>
                                 </select>
                             </div>
                             <div class="invalid-feedback"
                                 *ngIf="addOrderForm.controls['paymentMethod'].touched && addOrderForm.controls['paymentMethod'].hasError('required')">
-                                The payment Method should not be empty.
+                                {{ 'formErrors.paymentMethodRequired' | translate }}
                             </div>
+
                             <!-- Navigation Buttons -->
                             <div class="d-flex  justify-content-between mt-4">
-                                <button class="btn btn-dark" (click)="setStep(1)">Previous</button>
-                                <button class="btn btn-dark" [disabled]="isValidatForm"
-                                    (click)="setStep(3)">Next</button>
+                                <button class="btn btn-dark" (click)="setStep(1)">{{ 'buttons3.previous' | translate
+                                    }}</button>
+                                <button class="btn btn-dark" [disabled]="isValidatForm" (click)="setStep(3)">{{
+                                    'buttons3.next' | translate }}</button>
                             </div>
-
                         </form>
-
-
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Step 3 Content -->
-
         <div class="stepper-content fade-in" *ngIf="step === 3">
             <div class="step-content-wrapper">
                 <div class="text-muted fw-bold">
-                    <h2>Step 3: Confirm Details</h2>
+                    <h2>{{ 'stepper.step3Title' | translate }}</h2>
                 </div>
                 <div class="confirmation-content">
-                    <h3>Product Details</h3>
-                    <p><strong>Product Name:</strong> {{ selectedProduct.name }}</p>
-                    <p><strong>Description:</strong> {{ selectedProduct.description }}</p>
-                    <p><strong>SKU:</strong> {{ selectedProduct.sku }}</p>
-                    <p><strong>Price:</strong> {{ selectedProduct.price }} JD</p>
-                    <p><strong>Quantity:</strong>{{order.quantity}}</p>
-                    <p><strong>Total Price:</strong>{{order.totalPrice}} JD</p>
+                    <h3>{{ 'stepper.productDetails' | translate }}</h3>
+                    <p><strong>{{ 'stepper.productName' | translate }}:</strong> {{ selectedProduct.name }}</p>
+                    <p><strong>{{ 'stepper.description' | translate }}:</strong> {{ selectedProduct.description }}</p>
+                    <p><strong>{{ 'stepper.sku' | translate }}:</strong> {{ selectedProduct.sku }}</p>
+                    <p><strong>{{ 'stepper.price' | translate }}:</strong> {{ selectedProduct.price }} JD</p>
+                    <p><strong>{{ 'stepper.quantity' | translate }}:</strong>{{order.quantity}}</p>
+                    <p><strong>{{ 'stepper.totalPrice' | translate }}:</strong>{{order.totalPrice}} JD</p>
 
-                    <h3>Customer Information</h3>
-                    <p><strong>Customer Name:</strong> {{order.customerName}}</p>
-                    <p><strong>Shipping Address:</strong>{{order.shippingAddress}} </p>
-                    <p><strong>Order Date:</strong>{{order.orderDate | date:'shortDate'}} </p>
-                    <p><strong>Order Status:</strong>{{order.orderStatus}} </p>
-                    <p><strong>Payment Method:</strong>{{order.paymentmethods}} </p>
+                    <h3>{{ 'stepper.customerInformation' | translate }}</h3>
+                    <p><strong>{{ 'stepper.customerName' | translate }}:</strong> {{order.customerName}}</p>
+                    <p><strong>{{ 'stepper.shippingAddress' | translate }}:</strong>{{order.shippingAddress}} </p>
+                    <p><strong>{{ 'stepper.orderDate' | translate }}:</strong>{{order.orderDate | date:'shortDate'}}
+                    </p>
+                    <p><strong>{{ 'stepper.orderStatus' | translate }}:</strong>{{order.orderStatus}} </p>
+                    <p><strong>{{ 'stepper.paymentMethod' | translate }}:</strong>{{order.paymentmethods}} </p>
 
                     <div class="d-flex w-100 justify-content-between mt-4">
-                        <button class="btn btn-secondary" (click)="setStep(2)">Previous</button>
-                        <button class="btn btn-success" *ngIf="!isEdit" (click)="addOrder()">Save</button>
-                        <button class="btn btn-success" *ngIf="isEdit" (click)="updateOrder()">update</button>
+                        <button class="btn btn-secondary" (click)="setStep(2)">{{ 'buttons3.previous' | translate
+                            }}</button>
+                        <button class="btn btn-success" *ngIf="!isEdit" (click)="addOrder()">{{ 'buttons3.save' |
+                            translate }}</button>
+                        <button class="btn btn-success" *ngIf="isEdit" (click)="updateOrder()">{{ 'buttons3.update' |
+                            translate }}</button>
                     </div>
                 </div>
             </div>
         </div>
-
-
-
     </div>
 </div>
